--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: v5steven Blog
-SEOTitle: 老吴的博客 | Hux Blog
+SEOTitle: 老吴的博客 | V5steven Blog
 header-img: img/home-bg.jpg
 email: stevenyywu@gmail.com
 description: "这里是 @stevenyywu 的个人博客，与你一起探索更大的世界 | 要做一个有格局的酒店人"
